[project]
name = "comfyui_cartoonsegmentation"
description = "Front end ComfyUI nodes for CartoonSegmentation Based upon the work of the CartoonSegmentation repository this project will provide a front end to some of the features."
version = "1.0.0"
license = "LICENSE"
dependencies = ["torch==2.1.1 --index-url https://download.pytorch.org/whl/cu118", "torchvision==0.16.1 --index-url https://download.pytorch.org/whl/cu118", "torchaudio==2.1.1 --index-url https://download.pytorch.org/whl/cu118", "mmcv==2.1.0", "omegaconf", "pydensecrf @ git+https://github.com/lucasb-eyer/pydensecrf.git", "numba", "wheel==0.42.0", "cupy==12.3.0", "mmdet", "imageio", "pandas", "onnxruntime", "pytorch_lightning", "moviepy", "gomp", "panopticapi @ git+https://github.com/cocodataset/panopticapi.git", "albumentations==1.1.0", "imgaug", "basicsr", "timm==0.6.7", "## Comfy Requirements", "safetensors", "psutil", "einops", "transformers", "scipy", "torchsde", "## Comfy Note to use requirment.txt", "aiohttp"]

[project.urls]
Repository = "https://github.com/Nlar/ComfyUI_CartoonSegmentation"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_CartoonSegmentation"
Icon = ""
